# scrape-ai-agent

./: .cursorrules  main.py  pyproject.toml
.cursor/plans/: job_search_ai_agent_84294907.plan.md
